Fixed Aligningment to coverpic and nameholder

--- a/pages/styl.css
+++ b/pages/styl.css
@@ -86,7 +86,7 @@ border-radius: 10px/10px;
 	background:white;
 	left:100px;
 	    top: 75px;
-    height: 375px;
+    height: 360px;
 	width:850px;
 	position:absolute;
 	-webkit-box-shadow: 3px 3px 8px rgba(102, 255, 51, .75);
@@ -113,14 +113,14 @@ border-radius:5px/5px;
 	}
 
 .nameholder{
-	   top: 455px;
+	   top: 438px;
     //background: linear-gradient(to bottom right,#ff2626a3 ,#0072ffb3 );
         background: linear-gradient(to right,#e91d30 ,#f555ff  );
 	position: absolute;
     color: ghostwhite;
     left: 100;
     width: 850;
-    height: 46px;
+    height: 60px;
 }
 
 #navigationlink {
